compiler/typ/tests/fixtures/diagnostics/0897_gadt_witness_annotation_mismatch_04.ml
type _ witness_delta =
  | WInt_delta : int witness_delta
  | WBool_delta : bool witness_delta

let _ : bool witness_delta = WInt_delta
